re PR tree-optimization/15089 (local register variable with a specified register is bad)

2004-06-25  Philip Blundell  <philb@gnu.org>

	PR wrong-code/15089
	* loop.c (scan_loop): Do not move user-specified register
	assignments.

From-SVN: r83683